Fix sidebar buttons not appearing on mobile
Incorrectly assumed id.footer was contained within id.sidebar and set
its `left` property to 0. Replaced with `margin-left: -5px` to achieve
the correct placement (even on mobile).

--- a/neuron.css
+++ b/neuron.css
@@ -95,7 +95,7 @@ body {
 }
 
 #footer {
-    left: 0;
+    margin-left: -5px;
     right: 0;
     bottom: 0;
     background-color: transparent;
